# route-weather-python

./: Dockerfile  README.md  manage.py  pyproject.toml
api/: service.py  urls.py  views.py
api/templates/api/: index.html
route_weather/: asgi.py  settings.py  urls.py  wsgi.py
