[project]
name = "route-weather-python"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "djangorestframework-stubs>=3.17.0",
    "dotenv>=0.9.9",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.5",
]
